--- a/Final Report/Final Technical Appendix.rmd
+++ b/Final Report/Final Technical Appendix.rmd
@@ -665,7 +665,7 @@ for (i in 4:17) {
     }
 }
 
-# Function to create glm()'s
+# Function to create glm's
 fit.models.and.plot <- function(Data, variable, mu) {
     n <- nrow(Data)
     # Commented out models show alternative number of splines / setup
@@ -771,7 +771,7 @@ for (variable in c("Working", "Housework", "Food.Preparation", "Childcare")) {
 }
 ```
 
-The following plots show the low participation rate of Vehicle Maintenance and House Maintenance as noted in the report.
+The following plots show the low participation rates for Vehicle Maintenance and House Maintenance as noted in the report.
 
 ```{r Low participation evidence}
 ggplot(Gender.Roles.Data, aes(x = TUYEAR, y = 100*(House.Maintenance > 0))) + geom_smooth() + labs(x = "Year", y = "Particpation Rate (%)", title = "Particpation rate of house maintenance", caption = "Data Source:ATUS Survey")
