--- a/Final-Report.Rmd
+++ b/Final-Report.Rmd
@@ -19,7 +19,7 @@ header-includes:
 
 The aim of this report is to discover how Americans' time use patterns have changed over the last 15 years, through discovering and analysing long-term trends over the years of 2003 to 2017. The datasets [@atusdatasets] used to tackle this comprise some of the results of the American Time Use Survey (ATUS) [@ATUS]. ATUS respondents were interviewed once about how they spent their time on the previous day, where they were, and whom they were with. The survey records the time spent on 431 different activities that are grouped into 17 different categories. In the analysis these categories will often be referred to by a variable beginning with `tu` followed by a two-digit *category number*. The meaning of each category number and identifications for the rest of the variables can be found in the lexicon and data dictionary files which are available on the [ATUS website](https://www.bls.gov/tus/lexiconnoex0317.pdf).
 
-The [Bureau of Labor Statistics website](https://www.bls.gov/tus/charts.htm) provides a number of charts looking at the 2017 annual averages for these categories. This report provides a more definitive conclusion on how time use patterns changed over the period, evidenced with statistical investigation of the data. The findings offer in-depth explanations as to where some of the biggest fluctuations are and suggests possible reasons for these fluctuations. Limitations to the analysis are noted where appropriate and these must be taken into account when performing any further analysis or summaries, and mentioned alongside any conclusions.
+The [Bureau of Labor Statistics website](https://www.bls.gov/tus/charts.htm) provides a number of charts looking at the 2017 annual averages for these categories. This report provides a more definitive conclusion on how time use patterns changed over the period, evidenced with the statistical investigation of the data. The findings offer in-depth explanations as to where some of the biggest fluctuations are and suggests possible reasons for these fluctuations. Limitations to the analysis are noted where appropriate and these must be taken into account when performing any further analysis or summaries, and mentioned alongside any conclusions.
 
 Usually when analysing data, statisticians will split the dataset into training data and validation data. This ensures that any conclusions drawn from exploratory data analysis (EDA) on the training data can be verified using the remaining "unseen" validation data. The analysis performed for this report follows this technique, splitting the data approximately in half to provide continuity and robustness in model training. The split was done by selecting even and odd months for training and validation data respectively, in order to ensure that seasonality did not cause incorrect rejections of hypotheses posed based upon the EDA, as well as ensuring there were no uneven gaps in the data which may lead to a loss of clarity in plotting. This split also allowed for conformity to one of the project requirements that the month of July was to be excluded initially and used for validation.
 
@@ -222,7 +222,7 @@ It is immediately clear that the most compelling change out of the 17 activity g
 best_subsets <- regsubsets(part_tu04~TUYEAR + TESEX + PEEDUCA + PEHSPNON + PTDTRACE + TEAGE + TELFS + TRCHILDNUM + TRHOLIDAY + TRSPPRES, data = Data_minus_columns, nvmax = 3, force.in = c(1))
 ```
 
-When fitting a linear model, the method of best subsets with *Year* forced in as a variable tells us that the most significant variables to predict the proportion of American's spending time *Caring for & Helping Nonhousehold (NonHH) Members* are *Sex* and *Number of Household Children*. Ths model is not sufficient to accurately predict `tu04` participation, however it does give a good idea as to what is causing the change over the period 2003 to 2017.
+When fitting a linear model, the method of best subsets with *Year* forced in as a variable tells us that the most significant variables to predict the proportion of American's spending time *Caring for & Helping Nonhousehold (NonHH) Members* are *Sex* and *Number of Household Children*. This model is not sufficient to accurately predict `tu04` participation, however it does give a good idea as to what is causing the change over the period 2003 to 2017.
 
 ```{r part_tu04 Summary Model, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 n1 <- nrow(part_weighted_means_data)
@@ -403,7 +403,7 @@ Year_t_validation <- coefficients(part_tu04_sex_linear_model_summary_validation)
 lm_p_value_validation <- pt(Year_t_validation, part_tu04_sex_linear_model_validation$df, lower=TRUE)
 ```
 
-As in the EDA, but this time formally, a linear model is built using *Sex* and *Year* and a $t$-test performed. It gives a $p$-value $< 0.05$ (quite a bit less in fact). This means there is sufficient evidence to conclude that the proportion of American's who participate in caring for & helping non-household members has in fact decreased over the period 2003-2017 as suggested by the EDA.
+As in the EDA, but this time formally, a linear model is built using *Sex* and *Year* and a $t$-test performed. It gives a $p$-value $< 0.05$ (quite a bit less in fact). This means there is sufficient evidence to conclude that the proportion of American's who participate in caring for & helping non-household members have in fact decreased over the period 2003-2017 as suggested by the EDA.
 
 ```{r part_tu04 Sex Model Validation, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 n2_validation <- nrow(part_sex_weighted_means_data_validation)
@@ -422,7 +422,7 @@ part_tu04_sex_plot_validation <- ggplot(part_sex_weighted_means_data_validation,
   geom_ribbon(data = filter(part_tu04_sex_predicted_validation, TESEX =="F"), aes(y=fitted, ymin=ymin, ymax=ymax),alpha=0.1)
 ```
 
-The initial thoughts about the link with number of household children, from the EDA, again needed to be tested. A new model of the same structure  was built. Another formal t-test could then be completed on an update of this model which includes the number of household children.
+The initial thoughts about the link with the number of household children, from the EDA, again needed to be tested. A new model of the same structure  was built. Another formal t-test could then be completed on an update of this model which includes the number of household children.
 
 ```{r Adding TRCHILDNUM to model Validation, echo=FALSE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_child_grouped_validation <- Data_minus_columns_validation
@@ -648,7 +648,7 @@ kable(data.frame(Male.Activities, Female.Activities), caption  = "Traditionalist
 
 The liberal viewpoint discussed by Parsons suggests an equal balance of time for the genders in these roles. Whilst this study was developed over 50 years ago, a preliminary look at the data confirmed that, in 2003, a complete transition to the liberal viewpoint had not occurred. Therefore, it was decided to investigate whether the time use of these specific activities was converging to equality or remaining stationary with noticeable differences between genders. In order to do this as rigorously and objectively as possible, weighted averages were calculated amongst each demographic to best represent how different groups of peoples' time uses had changed over time and to make up for any inconsistencies in the data.
 
-Following some initial exploration of the data and breaking down the respondents into different generations [@generations], another layer of complexity to the analysis was developed. Splitting the data by age allowed for further hypotheses regarding progression through convergence of time use for both genders in the areas discussed above; it would perhaps be assumed that younger people would be more progressive in this respect. Using this generational approach provided a way of tracking a population over time without having to arbitrarily pick age categories. A small number of participants fell outside of these ranges, however, these represented only a small number of participants and so were added to the next nearest generation (e.g. if a participant was born in 1998, they would be added to the *Millennials* generation).
+Following some initial exploration of the data and breaking down the respondents into different generations [@generations], another layer of complexity to the analysis was developed. Splitting the data by age allowed for further hypotheses regarding progression through the convergence of time use for both genders in the areas discussed above; it would perhaps be assumed that younger people would be more progressive in this respect. Using this generational approach provided a way of tracking a population over time without having to arbitrarily pick age categories. A small number of participants fell outside of these ranges, however, these represented only a small number of participants and so were added to the next nearest generation (e.g. if a participant was born in 1998, they would be added to the *Millennials* generation).
 
 ```{r, echo=FALSE, cache=TRUE}
 Generations <- c("Silent Generation", "Baby Boomers", "Generation X", "Millennials")
@@ -660,25 +660,25 @@ For each of the activities, a suitable generalized linear model was developed us
 
 It was decided to plot a line for each of the genders despite the interest of the analysis being focussed on the difference *between* the genders. This is because having lines to associate with each gender is likely more clear to the reader and can more intuitively show any narrowing of the gap between genders for the variables of interest.
 
-As far as the hypotheses there are to validate, they can be summarised similarly for each variable: as first posed in the aforementioned 1950's study, it is likely that social changes will lead to an erosion of gender roles. The EDA suggested that this erosion has continued from 2003 to 2017 and so validation is required to attempt to confirm that the difference in time use for the relevant variables has indeed decreased as time has continued.
+As far as the hypotheses there are to validate, they can be summarised similarly for each variable: as first posted in the aforementioned 1950's study, it is likely that social changes will lead to an erosion of gender roles. The EDA suggested that this erosion has continued from 2003 to 2017 and so validation is required to attempt to confirm that the difference in time use for the relevant variables has indeed decreased as time has continued.
 
 ## Validation
 
-In order to validate the trends found in the EDA, the same approach to that taken in the first part of the report was followed: splitting the data set initially and using the unseen half to validate the observations and hypotheses made above. The validation data was then put through the same models used in the EDA and the hypotheses validated observationally. In addition to this more intuitive technique of validation, statistical $t$-testing was carried out to ensure significance in the shrinking difference between the two genders for the variables of interest. The models below showcase the results of the analysis after validation was carried out, plotting all of the data with the exception of July as required in the specification of this report. Despite using 11 months of the data here, it is critical to reiterate that all of the EDA and validation was carried out on entirely separate 6 month subsets of each year to ensure validity of the conclusions and testing.
+In order to validate the trends found in the EDA, the same approach to that taken in the first part of the report was followed: splitting the data set initially and using the unseen half to validate the observations and hypotheses made above. The validation data was then put through the same models used in the EDA and the hypotheses validated observationally. In addition to this more intuitive technique of validation, statistical $t$-testing was carried out to ensure significance in the shrinking difference between the two genders for the variables of interest. The models below showcase the results of the analysis after validation was carried out, plotting all of the data with the exception of July as required in the specification of this report. Despite using 11 months of the data here, it is critical to reiterate that all of the EDA and validation was carried out on entirely separate 6-month subsets of each year to ensure the validity of the conclusions and testing.
 
 ### Working
 
-The plots below show the change in working patterns between three different generations. The *Silent Generation* have been excluded from this plot as - by 2010 - the youngest of this generation will be 65. At this age, most will have retired and as such the plot is not likely to be very informative. Furthermore, the same scale is used for each graph (for ease of comparison), so including the *Silent Generation* would adversely affect the quality of comparison between the more informative generations.
+The plots below show the change in working patterns between three different generations. The *Silent Generation* has been excluded from this plot as - by 2010 - the youngest of this generation will be 65. At this age, most will have retired and as such the plot is not likely to be very informative. Furthermore, the same scale is used for each graph (for ease of comparison), so including the *Silent Generation* would adversely affect the quality of comparison between the more informative generations.
 
 ```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=9, fig.align='c', cache=TRUE}
 fit.models.and.plot(Gender.Roles.Plotting, 'Working', 250)
 ```
 
-It can be seen that year on year there has been a slight contraction, especially visible in *Generation X* when the peak around 2016 is ignored. It is clear that generationally, working hours follow a fairly standard trajectory, peaking for people in their middle ages. *Millennials* have seen a steady increase in their time spent working as would be expected for people in that age range; the genders seem to have a much smaller gap between them when compared with *Generation X* though, which is testament to part of the hypothesis made above regarding progressive social norms propagating through younger generations.
+It can be seen that year on year there has been a slight contraction, especially visible in *Generation X* when the peak around 2016 is ignored. It is clear that generationally, working hours follow a fairly standard trajectory, peaking for people in their middle ages. *Millennials* have seen a steady increase in their time spent working as would be expected for people in that age range; the genders seem to have a much smaller gap between them when compared with *Generation X* though, which is a testament to the part of the hypothesis made above regarding progressive social norms propagating through younger generations.
 
 ### House Maintenance and Vehicle Maintenance
 
-For both of these variables, it was decided that the participation rate was too low to warrant deeper analysis. Whilst the EDA findings suggested that there existed a separation in gender, with men spending more time on both of these activities, the participation rates of around 3% for both reflected that these were more uncommon activities. As such, it was decided that there was not enough data to reflect the time spent in a suitable linear model; variance was much greater amongst the lower valued variables and these particular fluctuations did not seem to follow a clear long term trend.
+For both of these variables, it was decided that the participation rate was too low to warrant deeper analysis. Whilst the EDA findings suggested that there existed a separation in gender, with men spending more time on both of these activities, the participation rates of around 3% for both reflected that these were more uncommon activities. As such, it was decided that there was not enough data to reflect the time spent in a suitable linear model; variance was much greater amongst the lower valued variables and these particular fluctuations did not seem to follow a clear long-term trend.
 
 ### Housework
 
@@ -704,17 +704,17 @@ For similar reasons to working, the *Silent Generation* has been excluded from t
 fit.models.and.plot(Gender.Roles.Plotting, 'Childcare', 50)
 ```
 
-These graphs show perhaps the greatest change in gender roles. The data for *Baby Boomers* and the *Silent Generation* shows very little, most likely as the variables included in childcare relate only to caring for household children, where a child is defined as someone below the age of 18. It is unlikely that many people within these generations would have children living with them at this age (in fact checking the data confirms that, in 2017, only 9% met this criteria). Furthermore, at this age their children are likely to be older and require less constant care as they become more independent. Therefore, the other generations - *Millennials* and *Generation X* - exhibit more interesting trends. For reasons similar to the older generations, the drop off in childcare at the end of *Generation X* can likely be explained as children mature. However, it is important to note that the drop off for women is sharper than it is for men, leading to a convergence in the weighted means for both. The gap has decreased substantially, from 50 minutes per day in 2003 to less than half that, around 20 minutes in 2017. This could further be attributed to the decrease in working time for this generation, noted above. The *Millennials* on the other hand exhibit an increase year on year for activities in childcare. Whilst the gap increases slightly over time, it doesn't ever reach a similar point to that of *Generation X*, with the biggest difference being around 40% compared to 60%.
+These graphs show perhaps the greatest change in gender roles. The data for *Baby Boomers* and the *Silent Generation* shows very little, most likely as the variables included in childcare relate only to caring for household children, where a child is defined as someone below the age of 18. It is unlikely that many people within these generations would have children living with them at this age (in fact checking the data confirms that, in 2017, only 9% met this criterion). Furthermore, at this age, their children are likely to be older and require less constant care as they become more independent. Therefore, the other generations - *Millennials* and *Generation X* - exhibit more interesting trends. For reasons similar to the older generations, the drop off in childcare at the end of *Generation X* can likely be explained as children mature. However, it is important to note that the drop off for women is sharper than it is for men, leading to a convergence in the weighted means for both. The gap has decreased substantially, from 50 minutes per day in 2003 to less than half that, around 20 minutes in 2017. This could further be attributed to the decrease in working time for this generation, noted above. The *Millennials* on the other hand exhibit an increase year on year for activities in childcare. Whilst the gap increases slightly over time, it doesn't ever reach a similar point to that of *Generation X*, with the biggest difference being around 40% compared to 60%.
 
 # Conclusions
 
-In conclusion, embarking upon EDA from multiple perspectives offered up a lot of potential trend analysis amongst the data. It can be seen that both of the main hypothesis groups constructed above were validated succesfully and provide some interesting insight into long term trends in the ATUS dataset. From a societal perspective, much has changed in a short length of time and these trends following on from projected changes in studies like the one referenced from the 1950's will likely continue into the future. Generating demographics and utilising the weights provided in the dataset allowed for more focussed analysis of what initially appears to be somewhat uninteresting data; no doubt there are many other trends to be uncovered given the resources and inspiration. Links such as number of children and time spent caring for others in a household were also discovered and highlight how interactions between factors can influence long term trends.
+In conclusion, embarking upon EDA from multiple perspectives offered up a lot of potential trend analysis amongst the data. It can be seen that both of the main hypothesis groups constructed above were validated successfully and provide some interesting insight into long-term trends in the ATUS dataset. From a societal perspective, much has changed in a short length of time and these trends following on from projected changes in studies like the one referenced from the 1950's will likely continue into the future. Generating demographics and utilising the weights provided in the dataset allowed for more focused analysis of what initially appears to be somewhat uninteresting data; no doubt there are many other trends to be uncovered given the resources and inspiration. Links such as the number of children and time spent caring for others in a household were also discovered and highlight how interactions between factors can influence long-term trends.
 
 ## Limitations of the Data
 
 One of the major limitations imposed on this research is the length of the period within which the data was gathered: 15 years is a short amount of time to observe trends amongst such a large population. This meant that often the data had to first be subsetted or transformed as no immediate trends were visible at the surface, this led to sporadic subset size (as mentioned with respect to Vehicle and House Maintenance) due to the number of filters required to get down to the demographics that were desirable to investigate.
 
-Another notable limitation is the reliance on people to remember the way in which they spend their time. It is likely that they would forget smaller tasks and focus on more memorable or time-consuming ones, this issue is excaserbated due to data only being collected for the previous 24 hours rather than over a larger period for each respondent's data point.
+Another notable limitation is the reliance on people to remember the way in which they spend their time. It is likely that they would forget smaller tasks and focus on more memorable or time-consuming ones, this issue is exacerbated due to data only being collected for the previous 24 hours rather than over a larger period for each respondent's data point.
 
 \parindent0pt
 
