--- a/Presentation/Presentation.Rmd
+++ b/Presentation/Presentation.Rmd
@@ -210,7 +210,7 @@ $Activity \sim -1 + Sex + Sex:ns(Year, knots = 2003, 2005, ..., 2017) + Generati
 - The $t$-test on a population level for this gave $p$-value of 0.0054 << 0.05
 
 
-## Validation - Working
+## Validation - Childcare
 
 ![](Childcare Validation.png)
 
